# btc-markets

./: .gitignore  btc-markets.cabal
data/: download-data.sh  market-list.txt
src/: Main.hs  Market.hs
