name:                btc-markets 
version:             0.0.1.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Ricardo Lanziano
maintainer:          arpunk@cryptolab.net
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable btc-markets
  main-is:             Main.hs 
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base > 4 && < 5
                     , text
                     , bytestring
                     , bytestring-lexing
                     , time
                     , old-locale
                     , transformers
                     , conduit
                     , csv-conduit
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , esqueleto
                     , resourcet

  hs-source-dirs:      src
  default-language:    Haskell2010
